# medical-chatbot

./: Dockerfile  README.md  app.py  inspect_chunks.py  main.py  pyproject.toml  setup.py  store_index.py
.github/workflows/: ci-cd.yaml
research/: trials.ipynb
src/: helper.py  prompt.py
static/: script.js  style.css
templates/: index.html
